# Grounded-Segment-Anything

./: .gitignore  README.md  demo.sh  grounded_sam_demo.py  grounding_dino_demo.py  install.sh  pyproject.toml  setup.py
GroundingDINO/groundingdino/models/GroundingDINO/: ms_deform_attn.py
src/: groundingdino  segment_anything
tests/grounding_dino/: test.py
