[project]
name = "Grounded-Segment-Anything"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Grounded SAM Authors"},
]
dependencies = [
    "addict",
    "diffusers[torch]>=0.27.2",
    "gradio",
    "huggingface-hub",
    "matplotlib>=3.8.4",
    "numpy",
    "onnx>=1.16.0",
    "onnxruntime>=1.17.3",
    "opencv-python>=4.9.0.80",
    "Pillow",
    "pycocotools>=2.0.7",
    "PyYAML",
    "requests",
    "setuptools",
    "supervision",
    "termcolor",
    "timm",
    "torch",
    "torchvision",
    "transformers",
    "yapf",
    "nltk",
    "fairscale",
    "litellm",
    "ram @ git+https://github.com/xinyu1205/recognize-anything.git",
    "ipykernel>=6.29.4",
    "mmcv-full>=1.7.2",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend", "torch"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true
