[project]
name = "Grounded-Segment-Anything"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Grounded SAM Authors"},
]
dependencies = [
    "addict",
    "diffusers[torch]",
    "gradio",
    "huggingface-hub",
    "matplotlib",
    "numpy",
    "onnx",
    "onnxruntime",
    "opencv-python",
    "Pillow",
    "pycocotools",
    "PyYAML",
    "requests",
    "setuptools",
    "supervision",
    "termcolor",
    "timm",
    "torch",
    "torchvision",
    "transformers",
    "yapf",
    "nltk",
    "fairscale",
    "litellm",
    # RAM is not actually used by the original Grounded SAM codebase
    # "ram @ git+https://github.com/xinyu1205/recognize-anything.git",
    "ipykernel",
    "mmcv-full>=1.7.2",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true

# no-isolation since dependencies build PyTorch CUDA extensions
[tool.pdm.options]
add = ["--no-isolation"]
install = ["--no-isolation"]
